--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
     "path": "^0.12.7",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
@@ -31,6 +33,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "style-loader": "^3.3.1"
   }
 }
