--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@babel/runtime": "^7.18.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.6.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.2.0",
+    "node-sass": "^7.0.1",
     "path": "^0.12.7",
-    "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
@@ -33,7 +37,6 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "style-loader": "^3.3.1"
+    "react-router-dom": "^6.3.0"
   }
 }
