--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-tooltip": "^4.2.21"
   }
 }
